# Chess-NN-Pack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
examples/: make_sample.cpp
examples/python/: cnnp_dataset.py  make_val_splits.py  train_nnue.py
include/cnnp/: byte_reader.hpp  cnnp.hpp  encoding.hpp  header.hpp  mmap_region.hpp  reader.hpp  validator.hpp  writer.hpp
notes/: CNNP-V2-SPEC.md  PIPELINE-VALIDATION.md  TOOLING-ROADMAP.md
python/: cnnp_pelanca.py  cnnp_py.cpp  test_cnnp.py
src/: encoding.cpp  header.cpp  mmap_region.cpp  reader.cpp  validator.cpp  writer.cpp
src/cli/: cnnp_main.cpp
test_data/: README.md
tests/: CMakeLists.txt  test_encoding.cpp  test_fixtures.hpp  test_golden.cpp  test_header.cpp  test_reader.cpp  test_validator.cpp  test_writer.cpp
tools/binpack_to_cnnp/: README.md  binpack_to_cnnp.cpp
